* V33
- Correct parsing when pattern is not recognized
- Remove zeros from statistics

* V32
- Better list layout
- Badges for ages
- Organizing preferences

* V31
- Settings to go back to the old statistics view
- Code refactoring (First part)
- Auto run on background settings/warning
- Settings for show current/next birthday age
- Fix a few more bugs

* V30
- Fix Statistic
- Statistics are moving from Text to Charts :)

* V29
- New settings option to hide zodiac
- New settings option to have Notification with a timestamp on it
- New languages
- Work on the leap years issues
- Clean up

* V28
- Remove Donate from the menu
- Fix Birthday list Menu bug
- Fix Timepicker deault time

* V27

- Rounded Icons
- Dark Theme
- More control over notification in advance
- Made the preferences dialog a little better \o/
- Cosmetic changes :O
- Better Search Function: Now you can search contact by:
    - Age
    - Month Name (January, June, etc)
    - Next Birthday Week name (check who is having a birthday party on Saturdays)
    - Zodiac Sign
    - Zodiac Element
    - Doing a wider search on the contact names
- Better navigation. No more accidental exit messages \o/
- A better way to choose how many days in advance you want to be notified
- Close soft keyboard when it loses focus
- Fix Notification message for contacts with no birth year specified
- Hide the Fail log button if there is nothing to show
- Donate link
- Swipe down to force to generate birthday notifications (optional)
- Add support for a few new languages thanks to a bunch of nice people :D \o/
    - German
    - French
    - Swedish
    - Italian
    - Russian
- Grammar/language fix
    - Brazilian Portuguese
    - English
- Not a 100% supported
    - Japanese

* V26

- Grammar & spelling fixes
- Fix a problem with the age of some contacts