@@ -1,3 +1,11 @@
+* V34
+- Favorite and Ignore list (move contat row to the left and to the right)
+- Code clean up (move from listView to recycleView)
+- Long press to edit contact
+- Notify me only about my favoite contacts (preferences)
+- Hide ignored contacts (preferences)
+- Use Emoji fonts instead of images
+
 * V33
 - Correct parsing when pattern is not recognized
 - Remove zeros from statistics
